--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<html>
 	
 <head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+<meta http-equiv="content-type" content="text/html" charset=UTF-8" />
 
 <meta name="title" content="Pike Surf Academy | Learn to Surf in Santa Barbara" />
     <meta name="author" content="Pike Surf Academy">
